package Beta;

public interface JSONData {
    void readJSONData();
}
