package Beta;

public interface XMLData {
    void readXMLData();
}
